# sympla_integration

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .gitignore  Dockerfile.app  Dockerfile.nginx  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  sfsfs.env
apps/events/: models.py  schemas.py  serializers.py  services.py  urls.py  views.py
apps/events/management/commands/: import_sympla_events.py
apps/events/migrations/: 0001_initial.py  0002_alter_loadbatch_status.py  0002_event_event_type.py  0003_event_end_date_delete_log.py
apps/events/tests/: test_commands.py  test_models.py  test_schemas.py  test_serializers.py  test_services.py  test_views.py
sympla_integration/: asgi.py  settings.py  urls.py  wsgi.py
utils/: enums.py
